--- a/_sass/partials/_projects.scss
+++ b/_sass/partials/_projects.scss
@@ -113,7 +113,7 @@
   word-break: break-word;
   hyphens: auto;
   overflow-wrap: break-word;
-  max-height: 3.2em;
+  max-height: 4.5em;
   overflow: hidden;
   text-overflow: ellipsis;
 }
@@ -127,7 +127,7 @@
   word-break: break-word;
   hyphens: auto;
   overflow-wrap: break-word;
-  max-height: 5em;
+  max-height: 7em;
   overflow: hidden;
   text-overflow: ellipsis;
 }
